changed all the emagain config files

--- a/cryptobri_emagain/PAIRS.properties
+++ b/cryptobri_emagain/PAIRS.properties
@@ -29,10 +29,12 @@ ALL_min_buy_price = 0.000005
 ALL_max_trading_pairs = 10
 
 #Buy Settings#
-#LOWBB#
-ALL_buy_strategy = LOWBB
-ALL_buy_value = 26
-ALL_trailing_buy = 0.28
+#ALL_buy_strategy = LOWBB
+#ALL_buy_value = 26
+#ALL_trailing_buy = 0.012
+ALL_buy_strategy = EMAGAIN
+ALL_buy_value = -0.50
+ALL_trailing_buy = 0.18
 #EMASPREAD#
 #ALL_buy_strategy = EMASPREAD
 #ALL_buy_value = -0.22
