--- a/cryptobri_emagain/INDICATORS.properties
+++ b/cryptobri_emagain/INDICATORS.properties
@@ -15,6 +15,10 @@ SMA_period = 300
 SMA_1 = 24
 SMA_2 = 12
 
-EMA_period = 300
-EMA_1 = 12
-EMA_2 = 3
+#EMA_period = 300
+#EMA_1 = 12
+#EMA_2 = 3
+
+EMA_period = 900
+EMA_1 = 20
+EMA_2 = 5
