--- a/Anderson Strat with EMASPREAD/PAIRS.properties
+++ b/Anderson Strat with EMASPREAD/PAIRS.properties
@@ -7,8 +7,10 @@ ALL_max_trading_pairs = 16
 ALL_max_buy_spread = 1
 ALL_min_buy_balance_percentage = 10
 
-BNBBTC_trading_enabled = false
-ALL_hidden_pairs = BNBBTC
+#On Binance, uncomment these, then buy 
+#and hodl 2 BNB tokens to automatically stop ALL dust.
+#BNBBTC_trading_enabled = false
+#ALL_hidden_pairs = BNBBTC
 
 ALL_buy_strategy = EMASPREAD
 ALL_buy_value = -0.79
