--- a/Anderson Strat with EMASPREAD/PAIRS.properties
+++ b/Anderson Strat with EMASPREAD/PAIRS.properties
@@ -19,7 +19,7 @@ ALL_trailing_buy = 0.15
 
 ALL_sell_strategy = GAIN
 ALL_sell_value = 0.92
-ALL_min_profit = 0.92
+#ALL_min_profit = 0.92
 ALL_trailing_profit = 0.5
 
 All_stop_loss_trigger = 0
